# catchattack-beta

./: .editorconfig  .env  .env.example  .gitignore  .pre-commit-config.yaml  BUILD_BRIEF.md  BUILD_BRIEF_ADDENDUM.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  biome.json  docker-compose.dev.yml  eslint.config.js  mypy.ini  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  ruff.toml  tailwind.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: backend.yml  ci.yml  frontend.yml  legacy-ci.yml.disabled
agent/: .goreleaser.yaml  README.md  config.toml  go.mod  go.sum
agent/proto/: agent.proto
apps/: README.md
apps/conductor/: README.md  pyproject.toml
apps/conductor/prompts/: system_v1.md
apps/conductor/src/conductor/: __init__.py  api.py  livekit.py  main.py  runner.py  runs.py
apps/conductor/src/conductor/clients/: __init__.py  llm.py  mcp.py  pr.py
apps/conductor/src/conductor/workflows/: __init__.py  closed_loop_rule_synthesis.py
apps/conductor/tests/: conftest.py  test_api.py  test_clients.py  test_live_api.py  test_livekit.py  test_workflow_closed_loop.py  test_workflow_integration.py
apps/web/: README.md  package.json  playwright.config.ts  tsconfig.json
backend/: .env.example  README.md  alembic.ini  database.py  main.py  pyproject.toml  pytest.ini  requirements.txt  schemas.py
backend/app/: main.py
backend/app/api/: auth.py  deps.py  rules.py
backend/app/api/v1/: ai.py  auth.py  builder.py  coverage.py  deploy.py  health.py  priorities.py  profiles.py  rules.py  runs.py  search.py  tuning.py
backend/app/core/: config.py  logging.py  rate_limit.py  security.py
backend/app/db/: models.py  schemas.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0003_rules_provenance_logic_hash_import_logs.py  797211b68978_create_initial_tables.py
backend/app/services/: recommendation.py
backend/app/services/ai/: cache.py  provider.py  safety.py
backend/app/services/ai/prompts/: attack_gen.md  infra_gen.md  rule_gen.md
backend/app/services/builder/: __init__.py  catalog.py  models.py  preview.py  schema.py
backend/app/services/coverage/: __init__.py
backend/app/services/deploy/: base.py  elastic.py  sentinel.py  splunk.py
backend/app/services/imports/: folder.py
backend/app/services/sigma_eval/: engine.py
backend/app/services/tuning/: overlays.py
backend/app/services/validation/: orchestrator.py  scheduler.py
backend/services/: art.py  caldera.py  emulator.py  mitre.py  security_sources.py  sigma.py  vm_manager.py  yaml_generator.py
contracts/: asset_event.avsc
detections/: README.md
docker/: Dockerfile.api  Dockerfile.web  docker-compose.yml  otel-config.yaml
docs/: ARCHITECTURE.md  README.md
docs/adr/: 0001-quarantine-legacy-and-monorepo-layout.md  0002-mcp-proxy-routing-and-namespacing.md  0003-sigma-dedupe-pluggable-embedder.md  0004-mock-or-real-vendor-mcps.md  0005-go-agent-and-capture-bundle.md  0006-closed-loop-workflow-and-conductor.md  0007-web-ui-v1.md  0008-live-mode-livekit.md  0009-phase7-stratus-and-falcon-mock.md
docs/architectures/: architecture.md
frontend/: .eslintrc.json  index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: main.tsx
infra/: Dockerfile.proxy  README.md  compose.yaml  egress.yaml  livekit.yaml
legacy/: docker-compose.dev.yml
legacy/backend/: schemas.py
legacy/contracts/: audit_event.avsc
legacy/docker/: otel-config.yaml
legacy/docs/: ARCHITECTURE.md  ai_endpoints.md  tuning_overlays.md
legacy/frontend/: index.html  package-lock.json  package.json
legacy/ops/: Makefile  demo.md
legacy/supabase/: config.toml
legacy/tests/: test_mitre.py
mcp/: README.md
mcp-proxy/: README.md  pyproject.toml  upstreams.example.yaml
mcp-proxy/src/mcp_proxy/: __init__.py  app.py  audit.py  config.py  policy.py  router.py
mcp-proxy/tests/: conftest.py  test_audit.py  test_config.py  test_policy.py  test_router.py
mcp/agents/: README.md  pyproject.toml
mcp/agents/src/agents_mcp/: __init__.py  models.py  server.py  transport.py
mcp/agents/tests/: conftest.py  test_server.py  test_transport.py
mcp/evidence/: README.md  pyproject.toml
mcp/evidence/src/evidence_mcp/: __init__.py  models.py  server.py  storage.py
mcp/evidence/tests/: conftest.py  test_server.py  test_storage.py
mcp/mocks/: README.md
mcp/mocks/caldera/: README.md  pyproject.toml
mcp/mocks/caldera/src/caldera_mock/: __init__.py  server.py
mcp/mocks/caldera/tests/: conftest.py  test_server.py
mcp/mocks/chronicle/: README.md  pyproject.toml
mcp/mocks/chronicle/src/chronicle_mock/: __init__.py  server.py
mcp/mocks/chronicle/tests/: conftest.py  test_server.py
mcp/mocks/elastic/: README.md  pyproject.toml
mcp/mocks/elastic/src/elastic_mock/: __init__.py  server.py
mcp/mocks/elastic/tests/: conftest.py  test_server.py
mcp/mocks/sentinelone/: README.md  pyproject.toml
mcp/mocks/sentinelone/src/sentinelone_mock/: __init__.py  server.py
mcp/mocks/sentinelone/tests/: conftest.py  test_server.py
mcp/sigma/: README.md  pyproject.toml
mcp/sigma/src/sigma_mcp/: __init__.py  convert.py  dedupe.py  embed.py  lint.py  models.py  parse.py  server.py
mcp/sigma/tests/: conftest.py  test_convert.py  test_dedupe.py  test_embed.py  test_lint.py  test_parse.py  test_server.py
mcp/stratus/: README.md  pyproject.toml
mcp/stratus/src/stratus_mcp/: __init__.py  models.py  runner.py  server.py
mcp/stratus/tests/: conftest.py  test_runner.py  test_server.py
mcp/wazuh/: README.md  pyproject.toml
mcp/wazuh/src/wazuh_mcp/: __init__.py  client.py  models.py  rules.py  server.py
mcp/wazuh/tests/: conftest.py  test_client.py  test_rules.py  test_server.py
ops/: Makefile  demo.py  seed_users.py  smoke.sh
ops/seeds/: techniques.json
scripts/: sigma_pre_commit.py
services/deployer/: main.py
services/edge_agent/: .env.example  discovery.py  main.py  models.py
src/: App.tsx  index.css  main.tsx  router.tsx  vite-env.d.ts
src/pages/: Index.tsx  (+12 more)
supabase/: config.toml
tests/: test_art.py  test_caldera.py
(+328 files in other folders)
