[project]
name = "catchattack-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "SQLAlchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "python-multipart>=0.0.9",
  "sqlalchemy-utils>=0.41",   # UUID helper
  "python-dateutil>=2.9",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "pysigma>=0.11",
  "pysigma-backend-elasticsearch>=1.1",
  "pysigma-backend-splunk>=1.1",
  "pysigma-backend-sentinel>=1.0",
  "PyYAML>=6.0",
  "ujson>=5.10",
  "elasticsearch>=8.13",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
