[project]
name = "catchattack-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "SQLAlchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "python-multipart>=0.0.9",
  "sqlalchemy-utils>=0.41",   # UUID helper
  "python-dateutil>=2.9",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "pysigma>=0.11",
  "pysigma-backend-elasticsearch>=1.1",
  "pysigma-backend-splunk>=1.1",
  "pysigma-backend-sentinel>=1.0",
  "PyYAML>=6.0",
  "ujson>=5.10",
  "elasticsearch>=8.13",
  "jsonpatch>=1.33",
  "ruamel.yaml>=0.18",  # preserves YAML mapping order/comments better than PyYAML
  "tenacity>=8.4",
  "httpx>=0.27",
  "orjson>=3.10",
  "jsonschema>=4.23",
  "opentelemetry-api>=1.25.0",
  "opentelemetry-sdk>=1.25.0",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "opentelemetry-instrumentation-requests>=0.46b0",
  "opentelemetry-exporter-otlp>=1.25.0",
  "structlog>=24.1.0",
  "pytest>=8.2",
  "pytest-cov>=5.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
