[project]
name = "conductor"
version = "0.1.0"
description = "CatchAttack Conductor — autonomous detection-engineering AI."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "fastmcp>=2.10,<4",
    "anthropic>=0.40",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "structlog>=24.4",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
    "httpx>=0.27",
    "types-PyYAML>=6.0",
]

[project.scripts]
conductor = "conductor.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/conductor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
