[project]
name = "agents-mcp"
version = "0.1.0"
description = "CatchAttack — bridge MCP between the proxy and the Go agent fleet."
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10,<4",
    "pydantic>=2.9",
    "structlog>=24.4",
    # gRPC is used to talk to live agents (Phase 4 wires this). Phase 3
    # ships the bridge surface with an in-memory transport for tests.
    "grpcio>=1.68",
    "protobuf>=5.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
]

[project.scripts]
agents-mcp = "agents_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
