[project]
name = "evidence-mcp"
version = "0.1.0"
description = "CatchAttack — Capture-bundle MCP server (addendum §E)."
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10,<4",
    "pydantic>=2.9",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
]

[project.scripts]
evidence-mcp = "evidence_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evidence_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
