[project]
name = "sigma-mcp"
version = "0.1.0"
description = "CatchAttack — Sigma MCP server: parse, lint, convert, dedupe."
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10,<4",
    "pysigma>=0.11",
    "pysigma-backend-splunk>=1.1",
    "pysigma-backend-elasticsearch>=1.1",
    "pysigma-backend-kusto>=0.4",
    "pysigma-backend-crowdstrike>=1.0",
    "pysigma-backend-secops>=0.2",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "structlog>=24.4",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
]

[project.scripts]
sigma-mcp = "sigma_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sigma_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
