[project]
name = "caldera-mock"
version = "0.1.0"
description = "CatchAttack — Mock MITRE CALDERA MCP."
requires-python = ">=3.12"
dependencies = ["fastmcp>=2.10,<4", "pydantic>=2.9"]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "mypy>=1.13"]

[project.scripts]
caldera-mock = "caldera_mock.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/caldera_mock"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
